--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "MembraneUtils"
+name = "MembraneBase"
 uuid = "a9449b16-1c3f-48ab-aa2c-0b9c6d97beee"
 authors = ["Will <carboxylmer@gmail.com> and contributors"]
 version = "0.1.2"
