--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Will <carboxylmer@gmail.com> and contributors"]
 version = "0.1.2"
 
 [deps]
+Bootstrap = "e28b5b4c-05e8-5b66-bc03-6f0c0a0a06e0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
