beginning to do stat tests and maybe will improve bootstrap and jackknife with multithreading

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Will <carboxylmer@gmail.com> and contributors"]
 version = "0.1.6"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Bootstrap = "e28b5b4c-05e8-5b66-bc03-6f0c0a0a06e0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
