--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MembraneBase"
 uuid = "a9449b16-1c3f-48ab-aa2c-0b9c6d97beee"
 authors = ["Will <carboxylmer@gmail.com> and contributors"]
-version = "0.1.11"
+version = "0.1.12"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -11,6 +11,7 @@ FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+OnlineStats = "a15396b6-48d5-5d58-9928-6d29437db91e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
