--- a/test/Project.toml
+++ b/test/Project.toml
@@ -2,4 +2,5 @@
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
