--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -2,6 +2,9 @@ name: CompatHelper
 on:
   schedule:
     - cron: 0 0 * * *
+  push:
+    branches:
+      - master
   workflow_dispatch:
 permissions:
   contents: write
