--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,9 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
+TaylorSeries = "0.15"
+GLM = "1"
+StaticArrays = "1"
 DataFrames = "1"
 Bootstrap = "2"
 OnlineStats = "1"
