--- a/Project.toml
+++ b/Project.toml
@@ -16,14 +16,15 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TaylorSeries = "6aa5eb33-94cf-58f4-a9d0-e4b2c4fc25ea"
 
 [compat]
-TaylorSeries = "0.15"
-GLM = "1"
-StaticArrays = "1"
-DataFrames = "1"
 Bootstrap = "2"
-OnlineStats = "1"
-Measurements = "2"
+DataFrames = "1"
 FiniteDiff = "2"
+GLM = "1"
+Measurements = "2"
+OnlineStats = "1"
+StaticArrays = "1"
+StatsBase = "0.34"
+TaylorSeries = "0.15"
 julia = "1.6"
 
 [extras]
