--- a/Project.toml
+++ b/Project.toml
@@ -23,10 +23,9 @@ GLM = "1"
 Measurements = "2"
 OnlineStats = "1"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 TaylorSeries = "0.15"
 julia = "1.6"
-
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
