I need compat for stdlibs now?

--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Bootstrap = "2"
 DataFrames = "1"
 FiniteDiff = "2"
 GLM = "1"
+LinearAlgebra = "1"
 Measurements = "2"
 OnlineStats = "1"
 StaticArrays = "1"
