--- a/Project.toml
+++ b/Project.toml
@@ -25,9 +25,8 @@ Measurements = "2"
 OnlineStats = "1"
 StaticArrays = "1"
 StatsBase = "0.33"
-TaylorSeries = "0.15"
+TaylorSeries = "0.15, 0.16"
 julia = "1.6"
-
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
